--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
 								<a href="products.html"><b>Toys</b></a>
 							</li>
 						</ul> 
+						<!--Thêm đoạn mã sau vào đây-->
+						<ul class="nav navbar-nav top-nav-info">
+							<li><a href="checkout.html"><b>Checkout</b></a></li>
+						</ul>
+						<!--Kết thúc đoạn mã được thêm-->
 						<div class="clearfix"> </div>
 						<header class="cd-main-header">
 							<ul class="cd-header-buttons">
@@ -272,7 +277,7 @@
 			<div class="footer-info">
 				<div class="col-md-4 footer-grids wow fadeInUp animated" data-wow-delay=".5s">
 					<h4 class="footer-logo"><a href="index.html">Baby <b>Time</b></a></h4>
-					<p>2017 © Baby Time. All rights reserved | Design by HELP University</p>
+				
 				</div>
 				<div class="col-md-4 footer-grids wow fadeInUp animated" data-wow-delay=".7s">
 					<h3>Popular</h3>
