--- a/products.html
+++ b/products.html
@@ -136,150 +136,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="product-grids product-grids-mdl simpleCart_shelfItem wow fadeInUp animated" data-wow-delay=".7s">
-					<div class="new-top">
-						<a href="single.html"><img src="images/g5.jpg" class="img-responsive" alt=""/></a>
-						<div class="new-text">
-							<ul>
-								<li><a href="single.html">Quick View </a></li>
-								<li><input type="number" class="item_quantity" min="1" value="1"></li>
-								<li><a class="item_add" href=""> Add to cart</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="new-bottom">
-						<h5><a class="name" href="single.html">Full Sleve Hoddie</a></h5>
-						<div class="ofr">
-							<p><span class="item_price">RM60.00</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="product-grids simpleCart_shelfItem wow fadeInUp animated" data-wow-delay=".9s">
-					<div class="new-top">
-						<a href="single.html"><img src="images/g7.jpg" class="img-responsive" alt=""/></a>
-						<div class="new-text">
-							<ul>
-								<li><a href="single.html">Quick View </a></li>
-								<li><input type="number" class="item_quantity" min="1" value="1"></li>
-								<li><a class="item_add" href=""> Add to cart</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="new-bottom">
-						<h5><a class="name" href="single.html">Baby Swimming Neck</a></h5>
-						<div class="ofr">
-							<p><span class="item_price">RM110.00</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="product-grids simpleCart_shelfItem wow fadeInUp animated" data-wow-delay=".5s">
-					<div class="new-top">
-						<a href="single.html"><img src="images/g3.jpg" class="img-responsive" alt=""/></a>
-						<div class="new-text">
-							<ul>
-								<li><a href="single.html">Quick View </a></li>
-								<li><input type="number" class="item_quantity" min="1" value="1"></li>
-								<li><a class="item_add" href=""> Add to cart</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="new-bottom">
-						<h5><a class="name" href="single.html">Play Set</a></h5>
-						<div class="ofr">
-							<p><span class="item_price">RM300.00</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="product-grids product-grids-mdl simpleCart_shelfItem wow fadeInUp animated" data-wow-delay=".7s">
-					<div class="new-top">
-						<a href="single.html"><img src="images/g6.jpg" class="img-responsive" alt=""/></a>
-						<div class="new-text">
-							<ul>
-								<li><a href="single.html">Quick View </a></li>
-								<li><input type="number" class="item_quantity" min="1" value="1"></li>
-								<li><a class="item_add" href=""> Add to cart</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="new-bottom">
-						<h5><a class="name" href="single.html">Party Wear Frock</a></h5>
-						<div class="ofr">
-							<p><span class="item_price">RM80.00</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="product-grids simpleCart_shelfItem wow fadeInUp animated" data-wow-delay=".9s">
-					<div class="new-top">
-						<a href="single.html"><img src="images/g2.jpg" class="img-responsive" alt=""/></a>
-						<div class="new-text">
-							<ul>
-								<li><a href="single.html">Quick View </a></li>
-								<li><input type="number" class="item_quantity" min="1" value="1"></li>
-								<li><a class="item_add" href=""> Add to cart</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="new-bottom">
-						<h5><a class="name" href="single.html">Boy's T-Shirt</a></h5>
-						<div class="ofr">
-							<p><span class="item_price">RM89.00</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="product-grids simpleCart_shelfItem wow fadeInUp animated" data-wow-delay=".5s">
-					<div class="new-top">
-						<a href="single.html"><img src="images/g8.jpg" class="img-responsive" alt=""/></a>
-						<div class="new-text">
-							<ul>
-								<li><a href="single.html">Quick View </a></li>
-								<li><input type="number" class="item_quantity" min="1" value="1"></li>
-								<li><a class="item_add" href=""> Add to cart</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="new-bottom">
-						<h5><a class="name" href="single.html">Battery Bike</a></h5>
-						<div class="ofr">
-							<p><span class="item_price">RM1500.00</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="product-grids product-grids-mdl simpleCart_shelfItem wow fadeInUp animated" data-wow-delay=".7s">
-					<div class="new-top">
-						<a href="single.html"><img src="images/g10.jpg" class="img-responsive" alt=""/></a>
-						<div class="new-text">
-							<ul>
-								<li><a href="single.html">Quick View </a></li>
-								<li><input type="number" class="item_quantity" min="1" value="1"></li>
-								<li><a class="item_add" href=""> Add to cart</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="new-bottom">
-						<h5><a class="name" href="single.html">Romper Suit</a></h5>
-						<div class="ofr">
-							<p><span class="item_price">RM150.00</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="product-grids simpleCart_shelfItem wow fadeInUp animated" data-wow-delay=".9s">
-					<div class="new-top">
-						<a href="single.html"><img src="images/g12.jpg" class="img-responsive" alt=""/></a>
-						<div class="new-text">
-							<ul>
-								<li><a href="single.html">Quick View </a></li>
-								<li><input type="number" class="item_quantity" min="1" value="1"></li>
-								<li><a class="item_add" href=""> Add to cart</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="new-bottom">
-						<h5><a class="name" href="single.html">Small Baby Crib</a></h5>
-						<div class="ofr">
-							<p><span class="item_price">RM720.00</span></p>
-						</div>
-					</div>
-				</div>
+				<!-- Repeat other product-grids here -->
 			</div>
 			<div class="col-md-3 rsidebar">
 				<div class="rsidebar-top">
@@ -324,7 +181,7 @@
 			<div class="footer-info">
 				<div class="col-md-4 footer-grids wow fadeInUp animated" data-wow-delay=".5s">
 					<h4 class="footer-logo"><a href="index.html">Baby <b>Time</b></a></h4>
-					<p>2017 © Baby Time. All rights reserved | Design by HELP University</p>
+					
 				</div>
 				<div class="col-md-4 footer-grids wow fadeInUp animated" data-wow-delay=".7s">
 					<h3>Popular</h3>
@@ -346,6 +203,26 @@
 			</div>
 		</div>
 	</div>
+	
+	<script>
+		$(document).ready(function(){
+			// Xử lý sự kiện khi bấm vào nút "Add to cart"
+			$(".item_add").click(function(){
+				// Lấy thông tin của sản phẩm
+				var productName = $(this).closest(".new-bottom").find(".name").text();
+				var productPrice = $(this).closest(".new-bottom").find(".item_price").text();
+				var quantity = $(this).closest(".new-bottom").find(".item_quantity").val();
+	
+				// Tạo HTML cho sản phẩm được thêm vào giỏ hàng
+				var cartItem = "<div class='cart-item'>" +
+								   "<p>" + productName + " - " + productPrice + " x " + quantity + "</p>" +
+							   "</div>";
+	
+				// Thêm sản phẩm vào giỏ hàng
+				$(".cart-box").append(cartItem);
+			});
+		});
+	</script>
 	<script src="js/main.js"></script>
     <script src="js/bootstrap.js"></script>
 </body>
