--- a/signin.html
+++ b/signin.html
@@ -124,7 +124,7 @@
 				<h4>Welcome back to Baby Time ! <br> Not a Member? <a href="register.html">  Register Now »</a> </h4>
 			</div>
 			<div class="login-body wow fadeInUp animated" data-wow-delay=".7s">
-				<form>
+				<form action="index.html"> <!-- Form sẽ điều hướng đến trang chính -->
 					<input type="text" class="user" name="email" placeholder="Enter your email" required="">
 					<input type="password" name="password" class="lock" placeholder="Password">
 					<input type="submit" name="Sign In" value="Sign In">
@@ -149,7 +149,7 @@
 			<div class="footer-info">
 				<div class="col-md-4 footer-grids wow fadeInUp animated" data-wow-delay=".5s">
 					<h4 class="footer-logo"><a href="index.html">Baby <b>Time</b></a></h4>
-					<p>2017 © Baby Time. All rights reserved | Design by HELP University</p>
+			
 				</div>
 				<div class="col-md-4 footer-grids wow fadeInUp animated" data-wow-delay=".7s">
 					<h3>Popular</h3>
