--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
+<script type="application/x-javascript">addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
 
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
@@ -59,6 +59,11 @@
 							<div class="clearfix"> </div>
 						</div>
 					</div>
+					<!-- Thêm mục người dùng và liên kết sang trang profile -->
+					<div class="header-right my-profile">
+						<a href="profile.html"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Profile</a>			
+					</div>
+					<!-- Kết thúc phần được thêm -->
 					<div class="clearfix"> </div>
 				</div>
 				<div class="clearfix"> </div>
@@ -91,11 +96,7 @@
 								<a href="products.html"><b>Toys</b></a>
 							</li>
 						</ul> 
-						<!--Thêm đoạn mã sau vào đây-->
-						<ul class="nav navbar-nav top-nav-info">
-							<li><a href="checkout.html"><b>Checkout</b></a></li>
-						</ul>
-						<!--Kết thúc đoạn mã được thêm-->
+					
 						<div class="clearfix"> </div>
 						<header class="cd-main-header">
 							<ul class="cd-header-buttons">
@@ -199,7 +200,7 @@
 			</div>
 		</div>
 	</div>
-
+	
 	<div class="gallery">
 		<div class="container">
 			<div class="title-info wow fadeInUp animated" data-wow-delay=".5s">
@@ -299,7 +300,9 @@
 			</div>
 		</div>
 	</div>
+	<!-- Thêm mã JavaScript -->
 	<script src="js/main.js"></script>
-    <script src="js/bootstrap.js"></script>
+	<script src="js/bootstrap.js"></script>
+	<!-- Kết thúc mã JavaScript -->
 </body>
 </html>
